quick fix to codemirror while I find the real problem
codemirror shows a horizontal scrollbar on empty editors, which means you can't click on the first line to edit it. This sets the min-height to 2.8em, but really I need to find out why the scrollbar's appearing

--- a/editor/static/css/editor.css
+++ b/editor/static/css/editor.css
@@ -169,6 +169,7 @@ button.delete-grey:hover {
 .CodeMirror {
 	border: 1px solid #ccc;
 	height: auto;
+	min-height: 2.8em;
 }
 .CodeMirror-scroll {
 	height: auto;
